Added support for Audiveris-originated dataset